# Glide

./: .gitignore  Cargo.toml  README.md  scratch
.github/workflows/: rust-clippy.yml
server/: Cargo.toml  env_template  main_v2.rs
server/src/: lib.rs  main.rs  parser.rs  payload_parse.rs  routes.rs  settings.rs
server/src/config/: config.rs  config.toml  settings.rs
server/src/handlers/: model_router.rs
server/src/providers/: anthropic.rs  cohere.rs  mod.rs  openai.rs
