[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openai = "1.0.0-alpha.13"
dotenvy = "0.15.7"
config = { version = "0.13.4", features = ["toml"] }
lazy_static = "1.4.0"
async-trait = "0.1.74"
rocket = { version = "0.5.0", features = ["json"] }